feat:  Mejorar el diseño y el contenido del sitio web
Se perfeccionó el diseño general del sitio web agregando degradados de fondo, mejorando el aspecto de las tarjetas y ajustando el diseño de la página de contacto. La sección de artículos ahora tiene un diseño más atractivo y la página de contacto incorpora un mapa para una mejor visualización.

--- a/Sitio web Basico/articulo.html
+++ b/Sitio web Basico/articulo.html
@@ -1,160 +1,153 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="Explora los artículos de Julian Lobon sobre mi proceso de aprendizaje.Descubre insights, tips y más en nuestro portafolio."
-    />
-    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
-    <title>Artículos - Portafolio de Julian Lobon</title>
-    <meta
-      name="keywords"
-      content="artículos, portafolio, aprendizaje, Programación"
-    />
-    <meta name="robots" content="index, follow" />
 
-    <!-- Open Graph -->
-    <meta
-      property="og:title"
-      content="Artículos - Portafolio de Julian Lobon"
-    />
-    <meta
-      property="og:description"
-      content="Descubre artículos sobre mi proceso de aprendizaje en el portafolio de Julian Lobon."
-    />
-    <!-- <meta property="og:image" content="[URL de una imagen relevante]"> -->
-    <!-- <meta property="og:url" content="[URL de tu página de artículos]"> -->
-     <link rel="stylesheet" href="css/style.css">
-  </head>
-  <body>
-    <header class="container col header">
-      <section class="container header--section">
-        <header class="container header__nombre">
-          <img class="header__logo" src="img/favicon.png" alt="Logo de Julian Lobon">
-          <h1>Julian Lobon</h1>
-        </header>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description"
+    content="Explora los artículos de Julian Lobon sobre mi proceso de aprendizaje.Descubre insights, tips y más en nuestro portafolio." />
+  <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
+  <title>Artículos - Portafolio de Julian Lobon</title>
+  <meta name="keywords" content="artículos, portafolio, aprendizaje, Programación" />
+  <meta name="robots" content="index, follow" />
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="Artículos - Portafolio de Julian Lobon" />
+  <meta property="og:description"
+    content="Descubre artículos sobre mi proceso de aprendizaje en el portafolio de Julian Lobon." />
+  <!-- <meta property="og:image" content="[URL de una imagen relevante]"> -->
+  <!-- <meta property="og:url" content="[URL de tu página de artículos]"> -->
+  <link rel="stylesheet" href="css/style.css">
+</head>
+
+<body>
+  <header class="container col header">
+    <section class="container header--section">
+      <header class="container header__nombre">
+        <img class="header__logo" src="img/favicon.png" alt="Logo de Julian Lobon">
+        <h1>Julian Lobon</h1>
+      </header>
       <nav>
         <ul class="container header__tabs">
           <li class="tabs"><a href="index.html" rel="noopener noreferrer">Home</a></li>
           <li class="tabs"><a href="proyecto.html" rel="noopener noreferrer">Proyecto</a></li>
-          <li class="tabs"><a href="articulo.html"  rel="noopener noreferrer">Articulo</a></li>
-          <li class="tabs"><a href="contacto.html"  rel="noopener noreferrer">Contacto</a></li>
+          <li class="tabs"><a href="articulo.html" rel="noopener noreferrer">Articulo</a></li>
+          <li class="tabs"><a href="contacto.html" rel="noopener noreferrer">Contacto</a></li>
         </ul>
       </nav>
     </section>
 
-      <section class="container col header__hero">
-        <h2 class="header__titulo">Artículos</h2>
-        <p class="header--p">
-          Sumérgete en nuestra colección de artículos, donde compartimos ideas,
-          investigaciones y tendencias relevantes. Descubre contenido que
-          inspira, informa y enriquece tu conocimiento sobre diversos temas.
+    <section class="container col header__hero">
+      <h2 class="header__titulo">Artículos</h2>
+      <p class="header--p">
+        Sumérgete en nuestra colección de artículos, donde compartimos ideas,
+        investigaciones y tendencias relevantes. Descubre contenido que
+        inspira, informa y enriquece tu conocimiento sobre diversos temas.
+      </p>
+    </section>
+  </header>
+
+  <main class="container col main__fondo">
+    <h2 class="main__titulo">Escritos sobre el mi Aprendizaje en Programación</h2>
+
+    <section class="container col sec__main">
+      <article class="articulo">
+        <p class="main__apartado__fecha">Marzo 1 - Marzo 31, 2023</p>
+        <h4 class="main__titulo--h4">Haciendo lo Difícil en Programación Hace Todo Más Fácil</h4>
+        <p class="main__apartado__parrafo">
+          pasé más de 100 horas aprendiendo y practicando conceptos avanzados
+          de programación, desde estructuras de datos complejas hasta
+          algoritmos de búsqueda. Añadir esto a la lista de logros que mis
+          amigos y familiares probablemente no entenderían…
         </p>
-      </section>
-    </header>
+        <p class="main__apartado__parrafo">
+          Al principio, la curva de aprendizaje fue empinada. Me enfrenté a
+          errores frustrantes y conceptos que parecían imposibles de dominar.
+          Sin embargo, cada obstáculo que superé me proporcionó no solo
+          habilidades técnicas, sino también una nueva forma de pensar y
+          resolver problemas.
+        </p>
+        <p class="main__apartado__parrafo">
+          Aprendí que la programación no se trata solo de escribir código; se
+          trata de desarrollar una mentalidad lógica y analítica. Al final,
+          esos momentos difíciles se convirtieron en la base de mi confianza y
+          creatividad como desarrollador. Hacer lo difícil hizo que la
+          siguiente tarea, por más compleja que fuera, pareciera un desafío
+          manejable en lugar de una montaña insuperable.
+        </p>
+        <p class="main__apartado__parrafo">
+          Hoy, cuando miro atrás, me doy cuenta de que esos días difíciles de
+          aprendizaje y práctica fueron las etapas más importantes en mi
+          camino hacia la maestría en programación.
+        </p>
+      </article>
 
-    <main class="container col">
-      <h2 class="main__titulo">Escritos sobre el mi Aprendizaje en Programación</h2>
+      <article class="articulo">
+        <p class="main__apartado__fecha">Abril 1 - Abril 30, 2023</p>
+        <h4 class="main__titulo--h4">Dominando Algoritmos</h4>
+        <p class="main__apartado__parrafo">
+          Durante cuatro semanas, me sumergí en algoritmos de búsqueda y
+          ordenación. Al principio, me sentí abrumado, pero después de
+          practicar con desafíos, descubrí que entender estos conceptos hacía
+          que resolver problemas complejos fuera mucho más sencillo.
+        </p>
+        <button class="btn-articulo">Leer mas</button>
+      </article>
 
-      <section class="container col sec__main">
-        <article class="articulo">
-          <p class="main__apartado__fecha">Marzo 1 - Marzo 31, 2023</p>
-          <h4 class="main__titulo--h4">Haciendo lo Difícil en Programación Hace Todo Más Fácil</h4>
-          <p class="main__apartado__parrafo">
-            pasé más de 100 horas aprendiendo y practicando conceptos avanzados
-            de programación, desde estructuras de datos complejas hasta
-            algoritmos de búsqueda. Añadir esto a la lista de logros que mis
-            amigos y familiares probablemente no entenderían…
-          </p>
-          <p class="main__apartado__parrafo">
-            Al principio, la curva de aprendizaje fue empinada. Me enfrenté a
-            errores frustrantes y conceptos que parecían imposibles de dominar.
-            Sin embargo, cada obstáculo que superé me proporcionó no solo
-            habilidades técnicas, sino también una nueva forma de pensar y
-            resolver problemas.
-          </p>
-          <p class="main__apartado__parrafo">
-            Aprendí que la programación no se trata solo de escribir código; se
-            trata de desarrollar una mentalidad lógica y analítica. Al final,
-            esos momentos difíciles se convirtieron en la base de mi confianza y
-            creatividad como desarrollador. Hacer lo difícil hizo que la
-            siguiente tarea, por más compleja que fuera, pareciera un desafío
-            manejable en lugar de una montaña insuperable.
-          </p>
-          <p class="main__apartado__parrafo">
-            Hoy, cuando miro atrás, me doy cuenta de que esos días difíciles de
-            aprendizaje y práctica fueron las etapas más importantes en mi
-            camino hacia la maestría en programación.
-          </p>
-        </article>
+      <article class="articulo">
+        <p class="main__apartado__fecha">Febrero 1 - Marzo 31, 2023</p>
+        <h4 class="main__titulo--h4">Colaboración en Proyectos</h4>
+        <p class="main__apartado__parrafo">
+          Participé en un proyecto de código abierto durante dos meses.
+          Aprender a trabajar en equipo y recibir retroalimentación fue
+          desafiante, pero la colaboración hizo que las soluciones fueran más
+          creativas y efectivas.
+        </p>
+        <button class="btn-articulo">Leer mas</button>
+      </article>
 
-        <article class="articulo">
-          <p class="main__apartado__fecha">Abril 1 - Abril 30, 2023</p>
-          <h4 class="main__titulo--h4">Dominando Algoritmos</h4>
-          <p class="main__apartado__parrafo">
-            Durante cuatro semanas, me sumergí en algoritmos de búsqueda y
-            ordenación. Al principio, me sentí abrumado, pero después de
-            practicar con desafíos, descubrí que entender estos conceptos hacía
-            que resolver problemas complejos fuera mucho más sencillo.
-          </p>
-          <button class="btn-articulo">Leer mas</button>
-        </article>
+      <article class="articulo">
+        <p class="main__apartado__fecha">Enero 1 - Enero 20, 2023</p>
+        <h4 class="main__titulo--h4">Práctica de Testing</h4>
+        <p class="main__apartado__parrafo">
+          Pasé 20 horas implementando pruebas automatizadas en mis proyectos.
+          Al principio, parecía una tarea tediosa, pero ahora veo cómo las
+          pruebas previenen errores, ahorrándome tiempo y esfuerzo en el
+          futuro.
+        </p>
+        <button class="btn-articulo">Leer mas</button>
+      </article>
 
-        <article class="articulo">
-          <p class="main__apartado__fecha">Febrero 1 - Marzo 31, 2023</p>
-          <h4 class="main__titulo--h4">Colaboración en Proyectos</h4>
-          <p class="main__apartado__parrafo">
-            Participé en un proyecto de código abierto durante dos meses.
-            Aprender a trabajar en equipo y recibir retroalimentación fue
-            desafiante, pero la colaboración hizo que las soluciones fueran más
-            creativas y efectivas.
-          </p>
-          <button class="btn-articulo">Leer mas</button>
-        </article>
+      <article class="articulo">
+        <p class="main__apartado__fecha">Mayo 1 - Mayo 21, 2023</p>
+        <h4 class="main__titulo--h4">Aprendiendo Nuevas Tecnologías</h4>
+        <p class="main__apartado__parrafo">
+          Pasé tres semanas explorando un nuevo framework de desarrollo. La
+          curva de aprendizaje fue empinada, pero dominarlo amplió mis
+          horizontes y me permitió construir aplicaciones más robustas y
+          eficientes.
+        </p>
+        <button class="btn-articulo">Leer mas</button>
+      </article>
 
-        <article class="articulo">
-          <p class="main__apartado__fecha">Enero 1 - Enero 20, 2023</p>
-          <h4 class="main__titulo--h4">Práctica de Testing</h4>
-          <p class="main__apartado__parrafo">
-            Pasé 20 horas implementando pruebas automatizadas en mis proyectos.
-            Al principio, parecía una tarea tediosa, pero ahora veo cómo las
-            pruebas previenen errores, ahorrándome tiempo y esfuerzo en el
-            futuro.
-          </p>
-          <button class="btn-articulo">Leer mas</button>
-        </article>
+      <article class="articulo">
+        <p class="main__apartado__fecha">Junio 1 - Junio 31, 2023</p>
+        <h4 class="main__titulo--h4">Aprender a Depurar</h4>
+        <p class="main__apartado__parrafo">
+          Durante este mes, dediqué 30 horas a depurar código y entender
+          errores comunes. Cada error se convirtió en una lección valiosa,
+          transformando la frustración en habilidades prácticas que mejoraron
+          mi confianza como programador.
+        </p>
+        <button class="btn-articulo">Leer mas</button>
+      </article>
+    </section>
+  </main>
 
-        <article class="articulo">
-          <p class="main__apartado__fecha">Mayo 1 - Mayo 21, 2023</p>
-          <h4 class="main__titulo--h4">Aprendiendo Nuevas Tecnologías</h4>
-          <p class="main__apartado__parrafo">
-            Pasé tres semanas explorando un nuevo framework de desarrollo. La
-            curva de aprendizaje fue empinada, pero dominarlo amplió mis
-            horizontes y me permitió construir aplicaciones más robustas y
-            eficientes.
-          </p>
-          <button class="btn-articulo">Leer mas</button>
-        </article>
+  <footer class="container footer">
+    <p> <span>© Julian Lobon Aguilar - 2024.</span> Todos los derechos reservados. El contenido de este portfolio,
+      incluidos textos, imágenes y diseños, no puede ser reproducido ni utilizado sin el permiso expreso del autor.</p>
+  </footer>
+</body>
 
-        <article class="articulo">
-          <p class="main__apartado__fecha">Junio 1 - Junio 31, 2023</p>
-          <h4 class="main__titulo--h4">Aprender a Depurar</h4>
-          <p class="main__apartado__parrafo">
-            Durante este mes, dediqué 30 horas a depurar código y entender
-            errores comunes. Cada error se convirtió en una lección valiosa,
-            transformando la frustración en habilidades prácticas que mejoraron
-            mi confianza como programador.
-          </p>
-          <button class="btn-articulo">Leer mas</button>
-        </article>
-      </section>
-    </main>
-
-    <footer class="container footer">
-      <p> <span>© Julian Lobon Aguilar - 2024.</span> Todos los derechos reservados. El contenido de este portfolio,
-        incluidos textos, imágenes y diseños, no puede ser reproducido ni utilizado sin el permiso expreso del autor.</p>
-    </footer>
-  </body>
 </html>
