--- a/Sitio web Basico/proyecto.html
+++ b/Sitio web Basico/proyecto.html
@@ -26,15 +26,15 @@
         <img class="header__logo" src="img/favicon.png" alt="Logo de Julian Lobon">
         <h1>Julian Lobon</h1>
       </header>
-    <nav>
-      <ul class="container header__tabs">
-        <li class="tabs"><a href="index.html" rel="noopener noreferrer">Home</a></li>
-        <li class="tabs"><a href="proyecto.html" rel="noopener noreferrer">Proyecto</a></li>
-        <li class="tabs"><a href="articulo.html"  rel="noopener noreferrer">Articulo</a></li>
-        <li class="tabs"><a href="contacto.html"  rel="noopener noreferrer">Contacto</a></li>
-      </ul>
-    </nav>
-  </section>
+      <nav>
+        <ul class="container header__tabs">
+          <li class="tabs"><a href="index.html" rel="noopener noreferrer">Home</a></li>
+          <li class="tabs"><a href="proyecto.html" rel="noopener noreferrer">Proyecto</a></li>
+          <li class="tabs"><a href="articulo.html" rel="noopener noreferrer">Articulo</a></li>
+          <li class="tabs"><a href="contacto.html" rel="noopener noreferrer">Contacto</a></li>
+        </ul>
+      </nav>
+    </section>
 
     <section class="container col header__hero">
       <h2 class="header__titulo">Proyectos</h2>
@@ -46,70 +46,77 @@
     </section>
   </header>
 
-  <main class="container">
+  <main class="container main__fondo">
     <section class="container sec__main">
-    <aside class="container main__cards">
-      <section class="container main__card">
-        <article class="container col ">
-          <h3 class="main__titulo">Calculadora</h3>
-          <p class="main__apartado__parrafo"><strong>Objetivo:</strong> Crear una calculadora que realice operaciones básicas (suma, resta,
-            multiplicación y división) y se ejecute en un navegador web.</p>
-          <ul>
-            <h5 class="main__titulo--h4">Herramientas utilizadas</h5>
-            <li class="main__apartado__parrafo">Lenguaje: JavaScript HTML/CSS</li>
-            <li class="main__apartado__parrafo">IDE: VSCode</li>
-          </ul>
-        </article>
-        <aside>
-          <img src="https://placehold.co/100x150?text=Calculadora" alt="calculadora">
-        </aside>
-      </section>
+      <aside class="container main__cards">
+        <section class="container main__card">
+          <article class="container col ">
+            <h3 class="main__titulo">Calculadora</h3>
+            <p class="main__apartado__parrafo"><strong>Objetivo:</strong> Crear una calculadora que realice operaciones
+              básicas (suma, resta,
+              multiplicación y división) y se ejecute en un navegador web.</p>
+            <ul>
+              <h5 class="main__titulo--h4">Herramientas utilizadas</h5>
+              <li class="main__apartado__parrafo">Lenguaje: JavaScript HTML/CSS</li>
+              <li class="main__apartado__parrafo">IDE: VSCode</li>
+            </ul>
+          </article>
+          <aside class="card--img">
+            <img src="https://placehold.co/100x150?text=Calculadora" alt="calculadora">
+          </aside>
+        </section>
 
-      <section class="container main__card">
-        <article class="container col card">
-          <h3 class="main__titulo">Temporizador de Cuenta Regresiva</h3>
-          <p class="main__apartado__parrafo"><strong>Objetivo:</strong>Desarrollar un temporizador que permita a los usuarios establecer un tiempo
-            específico y que cuente hacia atrás, emitiendo una alerta al finalizar.</p>
-        </article>
-        <aside>
-          <img src="https://placehold.co/100x150?text=Temporizador de Cuenta Regresiva"
-            alt="Temporizador de Cuenta Regresiva">
-        </aside>
-      </section>
+        <section class="container main__card">
+          <article class="container col card">
+            <h3 class="main__titulo">Temporizador de Cuenta Regresiva</h3>
+            <p class="main__apartado__parrafo"><strong>Objetivo:</strong>Desarrollar un temporizador que permita a los
+              usuarios establecer un tiempo
+              específico y que cuente hacia atrás, emitiendo una alerta al finalizar.</p>
+          </article>
+          <aside class="card--img">
+            <img src="https://placehold.co/100x150?text=Temporizador de Cuenta Regresiva"
+              alt="Temporizador de Cuenta Regresiva">
+          </aside>
+        </section>
 
-      <section class="container main__card">
-        <article class="container col">
-          <h3 class="main__titulo">Aplicación de Quiz</h3>
-          <p class="main__apartado__parrafo"><strong>Objetivo:</strong> Desarrollar una aplicación de quiz interactiva que permita a los usuarios
-            responder preguntas y obtener puntuaciones. La aplicación puede ser utilizada para evaluar conocimientos
-            sobre diversos temas.</p>
-          <ol class="container col card--ol">
-            <h5 class="main__titulo--h4">Proceso de Desarrollo</h5>
-            <li class="main__apartado__parrafo">Planificación: Definir el objetivo, el público objetivo y los temas del quiz.</li>
-            <li class="main__apartado__parrafo">Diseño: Crear wireframes y mockups de la interfaz de usuario.</li>
-            <li class="main__apartado__parrafo">Desarrollo: Implementar la funcionalidad del quiz y la interfaz.</li>
-            <li class="main__apartado__parrafo">Pruebas: Probar la aplicación para detectar errores y mejorar la experiencia del usuario.</li>
-            <li class="main__apartado__parrafo">Lanzamiento: Publicar la aplicación en una plataforma adecuada (p. ej., un sitio web o como aplicación
-              móvil).</li>
-          </ol>
-        </article>
-        <aside>
-          <img src="https://placehold.co/100x150?text=Aplicación de Quiz" alt="Aplicación de Quiz">
-        </aside>
-      </section>
+        <section class="container main__card">
+          <article class="container col">
+            <h3 class="main__titulo">Aplicación de Quiz</h3>
+            <p class="main__apartado__parrafo"><strong>Objetivo:</strong> Desarrollar una aplicación de quiz interactiva
+              que permita a los usuarios
+              responder preguntas y obtener puntuaciones. La aplicación puede ser utilizada para evaluar conocimientos
+              sobre diversos temas.</p>
+            <ol class="container col card--ol">
+              <h5 class="main__titulo--h4">Proceso de Desarrollo</h5>
+              <li class="main__apartado__parrafo">Planificación: Definir el objetivo, el público objetivo y los temas
+                del quiz.</li>
+              <li class="main__apartado__parrafo">Diseño: Crear wireframes y mockups de la interfaz de usuario.</li>
+              <li class="main__apartado__parrafo">Desarrollo: Implementar la funcionalidad del quiz y la interfaz.</li>
+              <li class="main__apartado__parrafo">Pruebas: Probar la aplicación para detectar errores y mejorar la
+                experiencia del usuario.</li>
+              <li class="main__apartado__parrafo">Lanzamiento: Publicar la aplicación en una plataforma adecuada (p.
+                ej., un sitio web o como aplicación
+                móvil).</li>
+            </ol>
+          </article>
+          <aside class="card--img">
+            <img src="https://placehold.co/100x150?text=Aplicación de Quiz" alt="Aplicación de Quiz">
+          </aside>
+        </section>
 
-      <section class="container main__card">
-        <article class="container col card">
-          <h3 class="main__titulo">Página de Productos</h3>
-          <p class="main__apartado__parrafo"><strong>Objetivo:</strong>Desarrollar una página que muestre una lista de productos con información
-            relevante, imágenes y opciones de compra.</p>
-        </article>
-        <aside>
-          <img src="https://placehold.co/100x150?text=Página de Productos" alt="Página de Productos">
-        </aside>
-      </section>
-    </aside>
-  </section>
+        <section class="container main__card">
+          <article class="container col card">
+            <h3 class="main__titulo">Página de Productos</h3>
+            <p class="main__apartado__parrafo"><strong>Objetivo:</strong>Desarrollar una página que muestre una lista de
+              productos con información
+              relevante, imágenes y opciones de compra.</p>
+          </article>
+          <aside class="card--img">
+            <img src="https://placehold.co/100x150?text=Página de Productos" alt="Página de Productos">
+          </aside>
+        </section>
+      </aside>
+    </section>
   </main>
 
   <footer class="container footer">
