--- a/Sitio web Basico/contacto.html
+++ b/Sitio web Basico/contacto.html
@@ -47,28 +47,29 @@
     </section>
   </header>
 
-  <main class="container">
+  <main class="container main__fondo">
     <section class="container col sec__main">
 
-      <aside class="container">
-        <form class="main__form container col" action="">
+      <aside class="container contacto__aside">
+        <form class="container col main__form" action="">
           <h4 class="main__titulo--h4">Contácteme</h4>
-         <section class="container main__form">
-           <input class="input" type="text" name="nombre" placeholder="Nombre" required>
-           <input class="input" type="email" name="email" placeholder="Email" required>
-         </section>
+          <section class="container main__form">
+            <input class="input" type="text" name="nombre" placeholder="Nombre" required>
+            <input class="input" type="email" name="email" placeholder="Email" required>
+          </section>
           <input class="input" type="text" name="asunto" placeholder="Asunto" required>
           <textarea name="mensaje" placeholder="Mensaje" required></textarea>
           <button class="btn-contacto" type="submit">Enviar</button>
         </form>
 
-        <aside class="contacto--aside">
+        <aside class="container col contacto--aside">
           <h4 class="main__titulo--h4">Información de Contacto</h4>
-          <p class="main__apartado__parrafo">Siempre disponible para trabajar como autónomo si surge el proyecto adecuado. ¡No dudes en ponerte en
+          <p class="main__apartado__parrafo">Siempre disponible para trabajar como autónomo si surge el proyecto
+            adecuado. ¡No dudes en ponerte en
             contacto conmigo!</p>
           <article class="container info__contacto">
             <i class="fa-solid fa-user"></i>
-            <section class="container col">
+            <section class="container col info__contacto--section">
               <h5 class="main__titulo--h4">Nombre:</h5>
               <p class="main__apartado__parrafo">Julian Lobon</p>
             </section>
@@ -76,29 +77,29 @@
 
           <article class="container info__contacto">
             <i class="fa-solid fa-location-dot"></i>
-            <section class="container col">
-            <h5 class="main__titulo--h4">Ubicación:</h5>
-            <p class="main__apartado__parrafo">Calle 1 # 25 21 Cali, Colombia</p>
+            <section class="container col info__contacto--section">
+              <h5 class="main__titulo--h4">Ubicación:</h5>
+              <p class="main__apartado__parrafo">Calle 1 # 25 21 Cali, Colombia</p>
             </section>
           </article>
 
           <article class="container info__contacto">
             <i class="fa-solid fa-phone"></i>
-            <section class="container col">
-            <h5 class="main__titulo--h4">Llama me:</h5>
-            <p class="main__apartado__parrafo">+57 3117063560</p>
+            <section class="container col info__contacto--section">
+              <h5 class="main__titulo--h4">Llama me:</h5>
+              <p class="main__apartado__parrafo">+57 3117063560</p>
             </section>
           </article>
 
           <article class="container info__contacto">
             <i class="fa-solid fa-envelope"></i>
-            <section class="container col">
-            <h5 class="main__titulo--h4">Correo Electrónico:</h5>
-            <p class="main__apartado__parrafo">Julianlobon@hotmail.com</p>
+            <section class="container col info__contacto--section">
+              <h5 class="main__titulo--h4">Correo Electrónico:</h5>
+              <p class="main__apartado__parrafo">Julianlobon@hotmail.com</p>
             </section>
           </article>
 
-          <footer class="container ">
+          <footer class="container info__contacto--footer">
             <a href="https://github.com/LobonJulian"><i class="fa-brands fa-github"></i></a>
             <a href="https://www.linkedin.com/in/julian-aguilar/"> <i class="fa-brands fa-linkedin"></i></a>
             <a href="https://www.facebook.com/your-facebook-profile-url"><i class="fa-brands fa-facebook"></i></a>
@@ -108,11 +109,10 @@
         </aside>
       </aside>
 
-      <article class="sec__main">
+      <article class="sec__main contacto__map">
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d31862.327930420062!2d-76.20867533840332!3d3.4011045266275355!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sco!4v1728494727074!5m2!1ses!2sco"
-        allowfullscreen="" loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade"></iframe>
+          allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </article>
 
     </section>
