--- a/Sitio web Basico/index.html
+++ b/Sitio web Basico/index.html
@@ -28,25 +28,26 @@
         <img class="header__logo" src="img/favicon.png" alt="Logo de Julian Lobon">
         <h1>Julian Lobon</h1>
       </header>
-    <nav>
-      <ul class="container header__tabs">
-        <li class="tabs"><a href="index.html" rel="noopener noreferrer">Home</a></li>
-        <li class="tabs"><a href="proyecto.html" rel="noopener noreferrer">Proyecto</a></li>
-        <li class="tabs"><a href="articulo.html"  rel="noopener noreferrer">Articulo</a></li>
-        <li class="tabs"><a href="contacto.html"  rel="noopener noreferrer">Contacto</a></li>
-      </ul>
-    </nav>
-  </section>
+      <nav>
+        <ul class="container header__tabs">
+          <li class="tabs"><a href="index.html" rel="noopener noreferrer">Home</a></li>
+          <li class="tabs"><a href="proyecto.html" rel="noopener noreferrer">Proyecto</a></li>
+          <li class="tabs"><a href="articulo.html" rel="noopener noreferrer">Articulo</a></li>
+          <li class="tabs"><a href="contacto.html" rel="noopener noreferrer">Contacto</a></li>
+        </ul>
+      </nav>
+    </section>
 
     <section class="container col header__hero">
       <h2 class="header__titulo">FrontEnd Developer</h2>
-      <p class="header--p">Apasionado desarrollador web con experiencia en HTML, CSS y JavaScript. Especializado en crear
+      <p class="header--p">Apasionado desarrollador web con experiencia en HTML, CSS y JavaScript. Especializado en
+        crear
         sitios atractivos y funcionales, utilizando frameworks como React y Node.js. Enfocado en ofrecer experiencias de
         usuario intuitivas y soluciones innovadoras. ¡Listo para llevar tus ideas a la web!</p>
     </section>
   </header>
 
-  <main class="container">
+  <main class="container main__fondo">
     <section class="container col sec__main">
       <aside class="container main__aside">
         <article class="container col main__apartado">
