feat: Se refactorizó la sección "Reseñas de Profesores" para usar tarjetas individuales con imágenes, títulos y testimonios para una presentación visualmente más atractiva e informativa.

--- a/Sitio web Basico/index.html
+++ b/Sitio web Basico/index.html
@@ -121,23 +121,44 @@
       <article class="container col main__article">
         <h3 class="main__titulo">Reseñas de Profesores</h3>
         <aside class="container  main__article main__resena">
-          <section class="container col main__resena main__resena--section">
-            <h4 class="main__titulo--h4">Profesor Juan Getiva, Gente Estratégica</h4>
-            <p class="main__apartado__parrafo">"Un estudiante excepcional con una gran capacidad para resolver
-              problemas. Su dedicación al desarrollo web y su habilidad para trabajar en equipo lo hacen destacar."</p>
+          <section class="container tarjeta">
+            <article class="container col">
+              <img src="img/profesor Juan.jpg" alt="profesor">
+              <section class="title">
+                <h4 class="main__titulo--h4">Juan Getiva</h4>
+                <p class="main__apartado__parrafo"><em>Gente Estratégica</em></p>
+              </section>
+              <p class="main__apartado__parrafo">"Un estudiante excepcional con una gran capacidad para resolver
+                problemas. Su dedicación al desarrollo web y su habilidad para trabajar en equipo lo hacen destacar."
+              </p>
+            </article>
           </section>
 
-          <section class="container col main__resena main__resena--section">
-            <h4 class="main__titulo--h4">Profesora Ana Martínez, OpenBootCamp</h4>
-            <p class="main__apartado__parrafo">"Su compromiso y creatividad en los proyectos fueron impresionantes.
-              Demostró un gran dominio de las tecnologías y siempre estaba dispuesto a ayudar a sus compañeros."</p>
+          <section class="container tarjeta">
+            <article class="container col">
+              <img src="img/profesora Ana.jpg" alt="profesor">
+              <section class="title">
+                <h4 class="main__titulo--h4">Ana Martínez</h4>
+                <p class="main__apartado__parrafo"><em>OpenBootCamp</em></p>
+              </section>
+              <p class="main__apartado__parrafo">"Su compromiso y creatividad en los proyectos fueron impresionantes.
+                Demostró un gran dominio de las tecnologías y siempre estaba dispuesto a ayudar a sus compañeros."</p>
+            </article>
           </section>
 
-          <section class="container col main__resena main__resena--section">
-            <h4 class="main__titulo--h4">Profesor Carlos López, Coursera</h4>
-            <p class="main__apartado__parrafo">"Excelente en la aplicación de conceptos de UX/UI. Su proyecto final fue
-              un ejemplo de cómo combinar funcionalidad y estética, superando nuestras expectativas."</p>
+          <section class="container tarjeta">
+            <article class="container col">
+              <img src="img/profesor Carlos.jpg" alt="profesor">
+              <section class="title">
+                <h4 class="main__titulo--h4">Carlos López</h4>
+                <p class="main__apartado__parrafo"><em>Coursera</em></p>
+              </section>
+              <p class="main__apartado__parrafo">"Excelente en la aplicación de conceptos de UX/UI. Su proyecto final
+                fue
+                un ejemplo de cómo combinar funcionalidad y estética, superando nuestras expectativas."</p>
+            </article>
           </section>
+
         </aside>
       </article>
     </section>
