--- a/Sitio web Basico/contacto.html
+++ b/Sitio web Basico/contacto.html
@@ -51,13 +51,21 @@
     <section class="container col sec__main">
 
       <aside class="container contacto__aside">
-        <form class="container col main__form" action="">
+        <form class="container col main__form" action="" novalidate>
           <h4 class="main__titulo--h4">Contácteme</h4>
           <section class="container main__form">
-            <input class="input" type="text" name="nombre" placeholder="Nombre" required>
-            <input class="input" type="email" name="email" placeholder="Email" required>
-          </section>
-          <input class="input" type="text" name="asunto" placeholder="Asunto" required>
+            <label for="nombre">
+              <input class="input" type="text" name="nombre" placeholder="Nombre" required aria-required="true">
+            </label>
+            <label for="email">
+              <span>Por favor, introduzca una direccion de Correo Electrónico</span>
+              <input class="input" type="email" name="email" placeholder="Email" minlength='10' required aria-required='true' aria-invalid='true'>
+              <span class='error' aria-live='polite'></span>
+            </label>
+           </section>
+           <label for="asunto">
+             <input class="input" type="text" name="asunto" placeholder="Asunto" required>
+           </label>
           <textarea name="mensaje" placeholder="Mensaje" required></textarea>
           <button class="btn-contacto" type="submit">Enviar</button>
         </form>
