--- a/Sitio web Basico/contacto.html
+++ b/Sitio web Basico/contacto.html
@@ -51,16 +51,15 @@
     <section class="container col sec__main">
 
       <aside class="container contacto__aside">
-        <form class="container col main__form" action="" novalidate>
+        <form class="container col main__form"> 
           <h4 class="main__titulo--h4">Contácteme</h4>
           <section class="container main__form">
             <label for="nombre">
               <input class="input" type="text" name="nombre" placeholder="Nombre" required aria-required="true">
             </label>
             <label for="email">
-              <span>Por favor, introduzca una direccion de Correo Electrónico</span>
               <input class="input" type="email" name="email" placeholder="Email" minlength='10' required aria-required='true' aria-invalid='true'>
-              <span class='error' aria-live='polite'></span>
+              <span class="error" id="errorEmail">Por favor, ingresa un email válido.</span>
             </label>
            </section>
            <label for="asunto">
@@ -106,7 +105,6 @@
               <p class="main__apartado__parrafo">Julianlobon@hotmail.com</p>
             </section>
           </article>
-
           <footer class="container info__contacto--footer">
             <a href="https://github.com/LobonJulian"><i class="fa-brands fa-github"></i></a>
             <a href="https://www.linkedin.com/in/julian-aguilar/"> <i class="fa-brands fa-linkedin"></i></a>
