feat:  Mejorar la navegación y el estilo
Experiencia de usuario mejorada al agregar información sobre herramientas a los enlaces de navegación, mejorar el atractivo visual de las tarjetas y actualizar los formatos de imágenes.

--- a/Sitio web Basico/index.html
+++ b/Sitio web Basico/index.html
@@ -30,10 +30,10 @@
       </header>
       <nav>
         <ul class="container header__tabs">
-          <li class="tabs"><a href="index.html" rel="noopener noreferrer">Home</a></li>
-          <li class="tabs"><a href="proyecto.html" rel="noopener noreferrer">Proyecto</a></li>
-          <li class="tabs"><a href="articulo.html" rel="noopener noreferrer">Articulo</a></li>
-          <li class="tabs"><a href="contacto.html" rel="noopener noreferrer">Contacto</a></li>
+          <li><a class="tabs" data-tabs="Estas en Inicio " href="index.html" rel="noopener noreferrer">Home</a></li>
+          <li><a class="tabs" data-tabs="Aquí están los Proyectos" href="proyecto.html" rel="noopener noreferrer">Proyecto</a></li>
+          <li><a class="tabs" data-tabs="Vas haber algunos artículos " href="articulo.html" rel="noopener noreferrer">Articulo</a></li>
+          <li><a class="tabs" data-tabs="Esta es la sección para contactarse" href="contacto.html" rel="noopener noreferrer">Contacto</a></li>
         </ul>
       </nav>
     </section>
@@ -123,7 +123,7 @@
         <aside class="container  main__article main__resena">
           <section class="container tarjeta">
             <article class="container col">
-              <img src="img/profesor Juan.jpg" alt="profesor">
+              <img src="img/profesor Juan.avif" alt="profesor">
               <section class="title">
                 <h4 class="main__titulo--h4">Juan Getiva</h4>
                 <p class="main__apartado__parrafo"><em>Gente Estratégica</em></p>
@@ -136,7 +136,7 @@
 
           <section class="container tarjeta">
             <article class="container col">
-              <img src="img/profesora Ana.jpg" alt="profesor">
+              <img src="img/profesora Ana.avif" alt="profesor">
               <section class="title">
                 <h4 class="main__titulo--h4">Ana Martínez</h4>
                 <p class="main__apartado__parrafo"><em>OpenBootCamp</em></p>
@@ -148,7 +148,7 @@
 
           <section class="container tarjeta">
             <article class="container col">
-              <img src="img/profesor Carlos.jpg" alt="profesor">
+              <img src="img/profesor Carlos.avif" alt="profesor">
               <section class="title">
                 <h4 class="main__titulo--h4">Carlos López</h4>
                 <p class="main__apartado__parrafo"><em>Coursera</em></p>
