--- a/Sitio web Basico/proyecto.html
+++ b/Sitio web Basico/proyecto.html
@@ -49,7 +49,7 @@
   <main class="container main__fondo">
     <section class="container sec__main">
       <aside class="container main__cards">
-        <section class="container main__card">
+        <section class="container col main__card">
           <article class="container col ">
             <h3 class="main__titulo">Calculadora</h3>
             <p class="main__apartado__parrafo"><strong>Objetivo:</strong> Crear una calculadora que realice operaciones
@@ -62,11 +62,11 @@
             </ul>
           </article>
           <aside class="card--img">
-            <img src="https://placehold.co/100x150?text=Calculadora" alt="calculadora">
+            <img src="img/calculadora.avif" alt="calculadora">
           </aside>
         </section>
 
-        <section class="container main__card">
+        <section class="container col main__card">
           <article class="container col card">
             <h3 class="main__titulo">Temporizador de Cuenta Regresiva</h3>
             <p class="main__apartado__parrafo"><strong>Objetivo:</strong>Desarrollar un temporizador que permita a los
@@ -74,12 +74,11 @@
               específico y que cuente hacia atrás, emitiendo una alerta al finalizar.</p>
           </article>
           <aside class="card--img">
-            <img src="https://placehold.co/100x150?text=Temporizador de Cuenta Regresiva"
-              alt="Temporizador de Cuenta Regresiva">
+            <img src="img/Temporizador.avif" alt="Temporizador de Cuenta Regresiva">
           </aside>
         </section>
 
-        <section class="container main__card">
+        <section class="container col main__card">
           <article class="container col">
             <h3 class="main__titulo">Aplicación de Quiz</h3>
             <p class="main__apartado__parrafo"><strong>Objetivo:</strong> Desarrollar una aplicación de quiz interactiva
@@ -100,11 +99,11 @@
             </ol>
           </article>
           <aside class="card--img">
-            <img src="https://placehold.co/100x150?text=Aplicación de Quiz" alt="Aplicación de Quiz">
+            <img src="img/Quiz.avif" alt="Aplicación de Quiz">
           </aside>
         </section>
 
-        <section class="container main__card">
+        <section class="container col main__card">
           <article class="container col card">
             <h3 class="main__titulo">Página de Productos</h3>
             <p class="main__apartado__parrafo"><strong>Objetivo:</strong>Desarrollar una página que muestre una lista de
@@ -112,7 +111,7 @@
               relevante, imágenes y opciones de compra.</p>
           </article>
           <aside class="card--img">
-            <img src="https://placehold.co/100x150?text=Página de Productos" alt="Página de Productos">
+            <img src="img/productos.avif" alt="Página de Productos">
           </aside>
         </section>
       </aside>
