Navegación actualizada para resaltar la pestaña actual para mejorar la experiencia del usuario.  Se agregó una clase activa al elemento ancla de la pestaña seleccionada, cambiando su apariencia para distinguirla visualmente de otras pestañas.

--- a/Sitio web Basico/articulo.html
+++ b/Sitio web Basico/articulo.html
@@ -29,10 +29,10 @@
       </header>
       <nav>
         <ul class="container header__tabs">
-          <li class="tabs"><a href="index.html" rel="noopener noreferrer">Home</a></li>
-          <li class="tabs"><a href="proyecto.html" rel="noopener noreferrer">Proyecto</a></li>
-          <li class="tabs"><a href="articulo.html" rel="noopener noreferrer">Articulo</a></li>
-          <li class="tabs"><a href="contacto.html" rel="noopener noreferrer">Contacto</a></li>
+          <li><a class="tabs" data-tabs="Estas en Inicio " href="index.html" rel="noopener noreferrer">Home</a></li>
+          <li><a class="tabs" data-tabs="Aquí están los Proyectos" href="proyecto.html" rel="noopener noreferrer">Proyecto</a></li>
+          <li><a class="tabs active" data-tabs="Vas haber algunos artículos " href="articulo.html" rel="noopener noreferrer">Articulo</a></li>
+          <li><a class="tabs" data-tabs="Esta es la sección para contactarse" href="contacto.html" rel="noopener noreferrer">Contacto</a></li>
         </ul>
       </nav>
     </section>
@@ -149,5 +149,4 @@
       incluidos textos, imágenes y diseños, no puede ser reproducido ni utilizado sin el permiso expreso del autor.</p>
   </footer>
 </body>
-
 </html>
